@@ -64,6 +64,8 @@ nodes to be placed outside of buildings defined in the scenario.</li>
   <li> Added a priority queue disc (PrioQueueDisc).</li>
   <li> Added a new trace source in StaWifiMac for tracing beacon arrivals</li>
   <li> Added a new helper method to ApplicationContainer to start applications with some jitter around the start time</li>
+  <li> (network) Add a method to check whether a node with a given ID is within a NodeContainer.</li>
+
 </ul>
 <h2>Changes to existing API:</h2>
 <ul>
